--- a/main.html
+++ b/main.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-
 <html>
+    <head> 
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatile" content="IE=Edge">
+        <meta name="=viewport" content="width=device-width, initial-scale=1.0">
+        <title>Write a HTML code to create an Accio Job blog page</title>
+    </head>
+    <body>
+        <marquee>Welcome to Acciojobs!</marquee>
+        <a href="https://acciojob.com/blog/">Blog</a>
+        <br>
+        <div>
+            <img src="Image_one" alt="image" height="200px">
+            <br>
+            <a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+            <br>
+            <a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute-force method of problem solving…</a>
+        </div>
+        <br>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+        <div>
+            <img src="image_two" alt="image" height="200px">
+            <br>
+            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
+            <br>
+            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</a>
+        </div>
+        <br>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+        <div>
+            <img src="image_three" alt="image" height="200px">
+            <br>
+            <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</a>
+            <br>
+            <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn…</a>
+        </div>
+    </body>
 </html>
