--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-        <marquee behavior="" direction="left"></marquee>
+        <marquee behavior="scroll" direction="left">Welcome to Acciojobs!</marquee>
         <a href="https://acciojob.com/blog/">Blog</a>
         <br>
         <div>
