--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-        <marquee behavior="scroll" direction="left">Welcome to Acciojobs!</marquee>
-        <a href="https://acciojob.com/blog/">Blog</a>
+	        <marquee behavior="scroll" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
+        <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
         <br>
         <div>
             <img src="Image_one" alt="image" height="200px">
             <br>
-            <a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+            <a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h1>Brute Force vs. Optimization</h1></a>
             <br>
             <a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute-force method of problem solving…</a>
         </div>
@@ -22,7 +22,7 @@
         <div>
             <img src="image_two" alt="image" height="200px">
             <br>
-            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
+	            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a>
             <br>
             <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</a>
         </div>
@@ -31,7 +31,7 @@
         <div>
             <img src="image_three" alt="image" height="200px">
             <br>
-            <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</a>
+            <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/"><h1>10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</h1></a>
             <br>
             <a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to recruiters. Your LinkedIn…</a>
         </div>
