--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <br>
 	            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a>
             <br>
-            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</a>
+            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</p></a>
         </div>
         <br>
 
