--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-	        <marquee behavior="scroll" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
+	        <marquee behavior="scroll" direction="left">Welcome to Acciojobs!</marquee>
         <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
         <br>
         <div>
@@ -22,7 +22,7 @@
         <div>
             <img src="image_two" alt="image" height="200px">
             <br>
-	            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h1>DSA vs. Competitive Programming</h1></a>
+	            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
             <br>
             <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a…</p></a>
         </div>
