--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-	        <marquee behavior="scroll" direction="left">Welcome to Acciojobs!</marquee>
+		<marquee behavior="scroll" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
         <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
         <br>
         <div>
