--- a/main.html
+++ b/main.html
@@ -7,20 +7,15 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-		<marquee behavior="scroll" direction="left"><h1>Welcome to Acciojobs!</h1></marquee>
+		<marquee><h1>Welcome to Acciojobs!</h1></marquee>
         <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
-        <br>
-        <div>
-            <img src="Image_one" alt="image" height="200px">
-            <br>
-            <a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h1>Brute Force vs. Optimization</h1></a>
-            <br>
-            <a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute-force method of problem solving…</a>
-        </div>
-        <br>
 
-        <div>
-            <img src="image_two" alt="image" height="200px">
+            <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000"height="200px">
+            <a href="https://acciojob.com/blog/brute-force-vs-optimization/">
+				<h1>Brute Force vs. Optimization</h1>
+		</a>
+        <a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute-force method of problem solving…</a>
+			<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
             <br>
 	            <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
             <br>
