--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <title>Write a HTML code to create an Accio Job blog page</title>
     </head>
     <body>
-		<marquee><h1>Welcome to Acciojobs!</h1></marquee>
+		<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
         <a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
 
             
